# llm-agents

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  old-devcontainer.json
notebooks/: TEMPLATE_LIST
notebooks/literature/: memory_tool.ipynb  single-human-chatbot.ipynb
notebooks/literature/libsample/: bio_python.ipynb  single-human-chatbot.ipynb
notebooks/lumen/: lumen-graph-explorer.ipynb
notebooks/lumen/kg/: UC1.cypher  csv_ppc_lumen.csv  json_ppc_lumen.json
notebooks/psc_expert/: agent_psc_check.ipynb  loc.py  psc_snowballing_with_memory.ipynb  psc_writing_experiment.ipynb  testWhole.ipynb  tools_literature_lib.ipynb
notebooks/psc_expert/foundings/: findings.ipynb
notebooks/psc_expert/logs/: psc_chat_graph.ipynb  psc_snowballing_with_memory_demo_run.ipynb  tools_literature_lib_10_11_23_citations.ipynb  tools_literature_lib_10_11_23_shorter_paths.ipynb  tools_literature_lib_first 3 citations.ipynb
notebooks/psc_expert/results/: all.json  evaluation-xj.csv  evaluation-xj.numbers
notebooks/summerschool/: code-gen.ipynb  group_compare_countries.html  group_compare_countries.ipynb  libraries.ipynb  nested_data_extraction.ipynb  pair-chatbots-manzai.ipynb  pair_data_extraction.ipynb  sequence_data_extraction_draw.ipynb  sequence_try.ipynb  single-human-chatbot.ipynb  tool_wiki_extract.ipynb
notebooks/summerschool/htmls/: group_compare_countries-3.html  (+2 more)
notebooks/test/: fibonacci.ipynb  simplestart.ipynb
tools/: CypherExecutor.py  citation_tools.py  neo4j.py  tools.py
