[tool.poetry]
name = "llmagents"
version = "0.1.0"
description = "some examples using autogen"
authors = ["Hui Song"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyautogen = "^0.2.31"
biopython = "^1.84"
neo4j = "^5.25.0"
reportlab = "^4.2.5"
fpdf = "^1.7.2"
pdf2image = "^1.17.0"
pandas = "^2.2.3"
markdownify = "^0.13.1"
pypdf = "^5.0.1"
sentence-transformers = "^3.2.1"
chromadb = "0.5.5"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
